[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "healthbot"
version = "0.1.0"
description = "Healthbot application"
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "datasets",
    "langchain-chroma",
    "langchain-community",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langchain-text-splitters",
    "langfuse",
    "langgraph==1.2.9",
    "pydantic==2.13.4",
    "pypdf",
    "python-dotenv==1.2.2",
    "ragas",
    "tavily-python==0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/healthbot"]
